--- a/index.html
+++ b/index.html
@@ -30,18 +30,23 @@
 <!--BEGIN MAIN-->
 <main>
     <div class="container">
-        <article class="lead">
+        <section class="lead">
             <h1>Заменим или отремонтируем шины рядом с Вами</h1>
 
             <p>Без очередей и переплат.</p>
-            <p>Скидки до 30% на замену шин/колес.</p>
-            <p>2 авто скидка 10%</p>
-            <p>3 авто скидка 15%</p>
-            <p>более 5-7 авто скидка 20%</p>
-            <p>10 и более авто скидка 25%</p>
-        </article>
 
-        <article class="about">
+            <article class="lead__discount">
+                <h3>Скидки до 30% на замену шин/колес.</h3>
+                <ul class="lead-discount__list">
+                    <li>2 авто скидка 10%</li>
+                    <li>3 авто скидка 15%</li>
+                    <li>более 5-7 авто скидка 20%</li>
+                    <li>10 и более авто скидка 25%</li>
+                </ul>
+            </article>
+        </section>
+
+        <section class="about">
             <h2 class="about__title">Почему клиенты выбирают нас?</h2>
 
             <ul class="about__list">
@@ -50,7 +55,7 @@
                 <li>Только новое оборудование с точной балансировкой</li>
                 <li>Никаких очередей. Мы экономим Ваше время!</li>
             </ul>
-        </article>
+        </section>
     </div>
     <div class="container-fluid">
         <section class="services">
